--- a/html/login.html
+++ b/html/login.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    </style>
     </head>
 
     <body>
+<div class="container">
         login
         <div class="form-group">
-            <label for="inputsm">e-mail</label>
-            <input class="form-control input-sm" id="txtLoginEmail" type="text">
+            <label for="txtLoginEmail">E-mail Address</label>
+            <input type="email" class="form-control" id="txtLoginEmail" aria-describedby="emailHelp">
         </div>
         <div class="form-group">
-            <label for="inputdefault">password</label>
-            <input class="form-control" id="txtLoginPassword" type="text">
+            <label for="txtLoginPassword">Password</label>
+            <input class="form-control" id="txtLoginPassword" type="password" >
         </div>
-        <button class="ui-button ui-widget ui-corner-all" id="btnLogin">Login</button>
-
+        <button type="button" class="btn btn-primary" id="btnLogin">Login</button>
+</div>
         <script>
             jQuery( "#btnLogin" ).click(function() {
                 var email = jQuery("#txtLoginEmail").val();
