--- a/index.htm
+++ b/index.htm
@@ -14,10 +14,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!--Library Table-->
+    <script src="./library/bootgrid/jquery.bootgrid.js"></script>
+    <script src="./library/bootgrid/jquery.bootgrid.fa.js"></script>
+    <link href="./library/bootgrid/jquery.bootgrid.css" rel="stylesheet">
+
     <link href="./library/bootstrap-responsive.css" rel="stylesheet">
     <!--Override CSS-->
  <!--    <link href="./css/bootstrap.css" rel="stylesheet">-->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <link href="./css/override.css" rel="stylesheet">
     <script>
       //_gUserEmail = 'tutor1@gmail.com';  //bypass login
@@ -93,6 +100,7 @@
         <ul class="nav navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="javascript:changePage('./html/schedule.html');">ตารางสอน</a></li>
             <li class="nav-item"><a class="nav-link" href="javascript:changePage('./html/rate.html');">อัตราค่าเรียน</a></li>
+            <li class="nav-item"><a class="nav-link" href="javascript:changePage('./html/publishJob.html');">รับงานสอน</a></li>
             <li class="nav-item"><a class="nav-link" href="javascript:changePage('./html/contact.html');">ติดต่อเรา</a></li>
             <li class="nav-item dropdown">
 
