--- a/html/registerClass.html
+++ b/html/registerClass.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        
-    </head>
 
-    <body>
-        สมัครเรียน
-    </body>
+<head>
+
+</head>
+
+<body>
+    <div class="label-header">สมัครเรียน</div>
+</body>
+
 </html>
